# MortisPlayer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  CMake_cfg.cmake  CMake_pkg.cmake  README.md  build.bat
cmake/: config.cmake  package.cmake
core/common/: CMakeLists.txt  common.hpp
core/media/: CMakeLists.txt
core/media/include/: BaseFFmpeg.hpp  BaseSDL.hpp  media.hpp
core/media/src/: BaseFFmpeg.cpp  BaseSDL.cpp  media.cpp
core/spider/: CMakeLists.txt
core/spider/include/: ParseJson.hpp  SpiderVideo.hpp
core/spider/src/: ParseJson.cpp  SpiderVideo.cpp
gui/: CMakeLists.txt
gui/inc/: holomainwindow.hpp  nettofiledialog.hpp
gui/src/: HoloTitleWidget.cpp  holomainwindow.cpp  nettofiledialog.cpp
gui/style/: def_widget.qss
gui/ui/: HoloTitleWidget.ui  holomainwindow.ui  nettofiledialog.ui
test/build-holoplayer/: holoplayer.cpp
